# mitaron_railway1840

./: .env.example  LICENSE  README.md  pyproject.toml  railway_mania_agent.md  requirements.txt
config/: benchmarks.yaml  matching.yaml
config/prompts/: adjudicate_match.md  extract_authorized_segment.md
config/schemas/: authorized_segment.schema.json
data/: sources_manifest.csv
src/: 04_normalize.py  05_validate.py  06_prepare_gis.py  07_match.py  09_aggregate.py  railway_mania.py
tests/: test_railway_mania.py
tests/fixtures/: authorized_segments_extracted.jsonl  campop_gis_sample.csv
tests/gold/: manually_coded_sample.csv
